# DotnetWebExportDemo

./: LICENSE.md  README.md  build_all.sh  run
cpp_project/: CMakeLists.txt  export_presets.cfg  project.godot
csharp_project/: .gitignore  CSharpSample.csproj  Main.cs  Player.cs  export_presets.cfg  project.godot  web_imports.c
csharp_project/web_interop/: GodotImpl.js  callMainStub.js  setjmpStub.js  transferCanvas.js
